--- a/Resources/SharedResources.en.resx
+++ b/Resources/SharedResources.en.resx
@@ -165,17 +165,17 @@
   <data name="Checkbox" xml:space="preserve">
     <value>Checkbox</value>
   </data>
+  <data name="ChooseFile" xml:space="preserve">
+    <value>Choose a file</value>
+  </data>
   <data name="Comma-SeparatedTags" xml:space="preserve">
     <value>Comma-separated tags</value>
-  </data>
-  <data name="Comma-SeparatedUserNames" xml:space="preserve">
-    <value>Comma-separated usernames</value>
   </data>
   <data name="Comments" xml:space="preserve">
     <value>Comments</value>
   </data>
   <data name="Compare" xml:space="preserve">
-    <value>The {0} and {1} fields must match</value>
+    <value>The "{0}" and "{1}" fields must match</value>
   </data>
   <data name="ConfirmPassword" xml:space="preserve">
     <value>Confirm Password</value>
@@ -226,10 +226,10 @@
     <value>Description</value>
   </data>
   <data name="DuplicateEmail" xml:space="preserve">
-    <value>Email '{0}' is already taken</value>
+    <value>Email "{0}" is already taken</value>
   </data>
   <data name="DuplicateUserName" xml:space="preserve">
-    <value>Username {0} is already taken</value>
+    <value>Username "{0}" is already taken</value>
   </data>
   <data name="Edit" xml:space="preserve">
     <value>Edit</value>
@@ -244,10 +244,13 @@
     <value>Email</value>
   </data>
   <data name="EmailAddress" xml:space="preserve">
-    <value>The {0} field must be a valid email address</value>
+    <value>The "{0}" field must be a valid email address</value>
   </data>
   <data name="English" xml:space="preserve">
     <value>English</value>
+  </data>
+  <data name="EnterUsernameOrEmail" xml:space="preserve">
+    <value>Enter username or email</value>
   </data>
   <data name="ErrorDelete" xml:space="preserve">
     <value>Error on delete</value>
@@ -283,13 +286,13 @@
     <value>Image URL</value>
   </data>
   <data name="InvalidEmail" xml:space="preserve">
-    <value>The email '{0}' is invalid</value>
+    <value>The email "{0}" is invalid</value>
   </data>
   <data name="InvalidLoginAttempt" xml:space="preserve">
     <value>Invalid login attempt</value>
   </data>
   <data name="InvalidUserName" xml:space="preserve">
-    <value>The username '{0}' is invalid</value>
+    <value>The username "{0}" is invalid</value>
   </data>
   <data name="IsAdmin" xml:space="preserve">
     <value>Is has an admin role?</value>
@@ -312,6 +315,9 @@
   <data name="Logout" xml:space="preserve">
     <value>Logout</value>
   </data>
+  <data name="Main" xml:space="preserve">
+    <value>Main</value>
+  </data>
   <data name="MakeAdmin" xml:space="preserve">
     <value>Grant admin role</value>
   </data>
@@ -319,7 +325,10 @@
     <value>Maximal</value>
   </data>
   <data name="MaxLength" xml:space="preserve">
-    <value>The field {0} must be not greater than {1} characters long</value>
+    <value>The field "{0}" must be not greater than {1} characters long</value>
+  </data>
+  <data name="MaxLengthArray" xml:space="preserve">
+    <value>The field "{0}" must be not greater than {1} elements long</value>
   </data>
   <data name="Mean" xml:space="preserve">
     <value>Mean</value>
@@ -331,7 +340,10 @@
     <value>Minimal</value>
   </data>
   <data name="MinLength" xml:space="preserve">
-    <value>The field {0} must be at least {1} characters long</value>
+    <value>The field "{0}" must be at least {1} characters long</value>
+  </data>
+  <data name="MinLengthArray" xml:space="preserve">
+    <value>The field "{0}" must be at least {1} elements long</value>
   </data>
   <data name="MostFrequentAnswer" xml:space="preserve">
     <value>Most frequent answer</value>
@@ -350,6 +362,9 @@
   </data>
   <data name="NoPermission" xml:space="preserve">
     <value>You have no permission</value>
+  </data>
+  <data name="NoSelectedFile" xml:space="preserve">
+    <value>File is not selected</value>
   </data>
   <data name="NoTopicSelected" xml:space="preserve">
     <value>No topic selected</value>
@@ -409,7 +424,7 @@
     <value>Remove admin role</value>
   </data>
   <data name="Required" xml:space="preserve">
-    <value>The {0} field is required</value>
+    <value>The "{0}" field is required</value>
   </data>
   <data name="Restricted" xml:space="preserve">
     <value>Restricted</value>
@@ -428,6 +443,9 @@
   </data>
   <data name="SearchResults" xml:space="preserve">
     <value>Search results</value>
+  </data>
+  <data name="SelectedUsers" xml:space="preserve">
+    <value>Selected users</value>
   </data>
   <data name="SelectFile" xml:space="preserve">
     <value>Select a file</value>
