--- a/Resources/SharedResources.en.resx
+++ b/Resources/SharedResources.en.resx
@@ -303,7 +303,7 @@
   <data name="IsLockedOut" xml:space="preserve">
     <value>Is blocked?</value>
   </data>
-  <data name="LatestTemplate" xml:space="preserve">
+  <data name="LatestTemplates" xml:space="preserve">
     <value>Latest templates</value>
   </data>
   <data name="Like" xml:space="preserve">
@@ -461,6 +461,9 @@
   </data>
   <data name="SelectTopic" xml:space="preserve">
     <value>Select topic</value>
+  </data>
+  <data name="SendOnEmail" xml:space="preserve">
+    <value>Send answers on your email</value>
   </data>
   <data name="ShowInResults" xml:space="preserve">
     <value>Show in results</value>
