--- a/Resources/SharedResources.ru.resx
+++ b/Resources/SharedResources.ru.resx
@@ -144,6 +144,9 @@
   <data name="Answers" xml:space="preserve">
     <value>Ответы</value>
   </data>
+  <data name="AnswersEmail" xml:space="preserve">
+    <value>Копия вашей формы</value>
+  </data>
   <data name="AreYouSure?" xml:space="preserve">
     <value>Вы уверены?</value>
   </data>
@@ -155,6 +158,9 @@
   </data>
   <data name="Block" xml:space="preserve">
     <value>Заблокировать пользователя</value>
+  </data>
+  <data name="BodyEmail" xml:space="preserve">
+    <value>Вы можете скачать файл с вашими ответами</value>
   </data>
   <data name="Cancel" xml:space="preserve">
     <value>Отменить</value>
@@ -469,7 +475,7 @@
     <value>Выслать ответы на вашу почту</value>
   </data>
   <data name="ShowInResults" xml:space="preserve">
-    <value>Показывать в результатах</value>
+    <value>Показывать в предосмотре</value>
   </data>
   <data name="SingleLineText" xml:space="preserve">
     <value>Однострочный текст</value>
@@ -500,6 +506,9 @@
   </data>
   <data name="Tags" xml:space="preserve">
     <value>Теги</value>
+  </data>
+  <data name="Template" xml:space="preserve">
+    <value>Шаблон</value>
   </data>
   <data name="Templates" xml:space="preserve">
     <value>Шаблоны</value>
