--- a/Resources/SharedResources.en.resx
+++ b/Resources/SharedResources.en.resx
@@ -120,6 +120,9 @@
   <data name="AccessType" xml:space="preserve">
     <value>Access type</value>
   </data>
+  <data name="AccountName" xml:space="preserve">
+    <value>Account name</value>
+  </data>
   <data name="Actions" xml:space="preserve">
     <value>Actions</value>
   </data>
@@ -207,6 +210,9 @@
   <data name="CreateForm" xml:space="preserve">
     <value>Create form</value>
   </data>
+  <data name="CreateSalesforceAccount" xml:space="preserve">
+    <value>Create Salesforce account</value>
+  </data>
   <data name="CreateTemplate" xml:space="preserve">
     <value>Create new template</value>
   </data>
@@ -249,6 +255,9 @@
   <data name="EditForm" xml:space="preserve">
     <value>Edit form</value>
   </data>
+  <data name="EditSalesforceAccount" xml:space="preserve">
+    <value>Edit Salesforce account</value>
+  </data>
   <data name="EditTemplate" xml:space="preserve">
     <value>Edit template</value>
   </data>
@@ -288,6 +297,9 @@
   <data name="FillForm" xml:space="preserve">
     <value>Fill form</value>
   </data>
+  <data name="FirstName" xml:space="preserve">
+    <value>FirstName</value>
+  </data>
   <data name="FiveMostPopularTemplates" xml:space="preserve">
     <value>Five most popular templates</value>
   </data>
@@ -317,6 +329,9 @@
   </data>
   <data name="IsLockedOut" xml:space="preserve">
     <value>Is blocked?</value>
+  </data>
+  <data name="LastName" xml:space="preserve">
+    <value>Last Name</value>
   </data>
   <data name="LatestTemplates" xml:space="preserve">
     <value>Latest templates</value>
@@ -410,6 +425,9 @@
   </data>
   <data name="PasswordTooShort" xml:space="preserve">
     <value>Password must be at least {0} characters long</value>
+  </data>
+  <data name="Phone" xml:space="preserve">
+    <value>Phone</value>
   </data>
   <data name="PreviewMarkdown" xml:space="preserve">
     <value>Preview with markdown</value>
